--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_box_transform: ^0.2.1
+  flutter_box_transform: ^0.4.2
+  auto_size_text_field: ^2.2.1
 
 dev_dependencies:
   flutter_test:
